--- a/index.html
+++ b/index.html
@@ -10,3 +10,14 @@
     <!-- Your code here -->
   </body>
 </html>
+
+<img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" />
+<img 
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="Lion"
+/>
+<img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+  alt="Lion"
+  title="Lion in pain"
+  />
